--- a/client/src/components/nav/stylesnav.module.css
+++ b/client/src/components/nav/stylesnav.module.css
@@ -4,15 +4,15 @@
   top: 0;
   left: 0;
   width: 98%;
-  height: 55px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 10px;
   background-color: #333;
   color: #fff;
-  z-index: 1000; /* Para asegurarse de que esté por encima de otros elementos */
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); /* Ajusté el valor para que tenga un efecto más sutil */
+  z-index: 1000; 
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5); 
   border-radius: 10px;
 }
   
@@ -23,6 +23,9 @@
     padding: 10px 20px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    margin: 5px;
+    height: 30px;
+    text-size-adjust: auto;
   }
   
   .buttonNew:hover {
