--- a/client/src/components/paginado/stylespaginado.module.css
+++ b/client/src/components/paginado/stylespaginado.module.css
@@ -1,7 +1,7 @@
 .paginado {
     list-style: none;
     padding: 0;
-    margin: 0;
+    margin-top: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
