--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,7 @@
   -webkit-text-size-adjust: 100%;
 }
 
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -24,11 +25,13 @@ a:hover {
 }
 
 body {
-  margin: 0;
+ 
   display: flex;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  margin: 0;
+  padding: 0;
 }
 
 h1 {
